--- a/res/layout/activity_savedata_detail.xml
+++ b/res/layout/activity_savedata_detail.xml
@@ -1,8 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/savedata_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.martymarron.traveldiaryandroid.SaveDataDetailActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="132dp"
+        android:layout_height="87dp"
+        android:text="@string/resume_story"
+        android:onClick="openSelectStory" />
+
+</LinearLayout>
 
