--- a/res/menu/map.xml
+++ b/res/menu/map.xml
@@ -11,5 +11,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item 
+        android:id="@+id/action_add"
+        android:title="@string/action_add_milestone" 
+        android:showAsAction="never" />
 
 </menu>
