--- a/res/layout/activity_story_list.xml
+++ b/res/layout/activity_story_list.xml
@@ -1,11 +1,10 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/story_list"
-    android:name="com.martymarron.traveldiaryandroid.StoryListFragment"
+    android:id="@+id/story_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     tools:context="com.martymarron.traveldiaryandroid.StoryListActivity"
-    tools:layout="@android:layout/list_content" />
+    tools:ignore="MergeRootFrame" />
 
